# minji

./: CMakeLists.txt  Makefile  README.md
examples/: plane.par
src/: algebra.c  algebra.h  cartesian.c  constants.h  default_pars.c  fmt.h  functions.h  geometry.c  grid_set.c  init.c  input.c  log.c  log.h  main.c  mcrt.c  minji.h  output.c  parameters.h  parse.c  photon.c  planar_geo.c  random.c  read_pars.c  scatter.c  setup.c  spherical.c  spherical_geo.c  time.c  trans_phot.c  utility.c  vector.c
